auth, user, product openapi spec adjusted
